--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,8 @@
     <string name="rate_us">Rate us</string>
     <string name="about_us">About us</string>
     <string name="contact_us">Contact us</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="add_to_cart">Add to Cart</string>
+    <string name="confirm">Confirm</string>
 </resources>
