--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="add_to_cart">Add to Cart</string>
     <string name="confirm">Confirm</string>
     <string name="table_number">Table Number:</string>
+    <string name="channel_name">name</string>
+    <string name="channel_description">desc</string>
+    <string name="deliver_order">Deliver Order</string>
 </resources>
